[package]
name = "melange-mint"
version = "0.1.0"
authors = ["Melange Network"]
edition = "2018"
description = "A Mint contract for Melange Protocol - allows you to register and mint asset token"
license = ""

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.10
"""

[dependencies]
cw20 = { version = "1.0.0" }
cosmwasm-std = { version = "1.1.9" }
cosmwasm-storage = { version = "1.1.9" }
melange-protocol = { version = "0.1.0", path = "../../packages/melange_protocol" }
sei-cosmwasm = { version = "0.4.9" }
schemars = "0.8.11"
serde = { version = "1.0.150", default-features = false, features = ["derive"] }

[dev-dependencies]
# terra-cosmwasm = { version = "2.2.0" } # requires old version of signature 1.3.x
cosmwasm-schema = "1.1.9"
